[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/characters/BlaiseEnemy.gd" type="Script" id=1]
[ext_resource path="res://textures/characters/turret-barrel-sheet.png" type="Texture" id=2]
[ext_resource path="res://textures/characters/turret-base-sheet.png" type="Texture" id=3]
[ext_resource path="res://textures/effects/explosion-sheet.png" type="Texture" id=4]
[ext_resource path="res://sounds/explode.wav" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 10 )

[sub_resource type="Animation" id=2]
resource_name = "die"
tracks/0/type = "value"
tracks/0/path = NodePath("Explosion:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Explosion:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Barrel:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 4 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Base:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 2 ]
}

[sub_resource type="Animation" id=3]
resource_name = "hostile"
tracks/0/type = "value"
tracks/0/path = NodePath("Base:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("Barrel:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Explosion:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Base:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=5]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Barrel:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "shootbullet"
} ]
}

[node name="Turret" type="Node2D" groups=[
"Enemies",
]]
z_index = 300
z_as_relative = false
script = ExtResource( 1 )

[node name="Barrel" type="Sprite" parent="." groups=[
"RotateToPlayer",
]]
position = Vector2( 0, 0.5 )
texture = ExtResource( 2 )
offset = Vector2( 0, 0.5 )
hframes = 5
frame = 4

[node name="Base" type="Sprite" parent="." groups=[
"BaseRotates",
]]
position = Vector2( 0, 0.5 )
texture = ExtResource( 3 )
offset = Vector2( 0, 0.5 )
hframes = 3
frame = 2

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.7
autostart = true

[node name="Hurtbox" type="Area2D" parent="." groups=[
"BaseRotates",
]]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( 8, 0 )
shape = SubResource( 1 )

[node name="anims" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/die = SubResource( 2 )
anims/hostile = SubResource( 3 )
anims/idle = SubResource( 4 )
anims/shoot = SubResource( 5 )

[node name="Explosion" type="Sprite" parent="." groups=[
"BaseRotates",
]]
visible = false
z_index = 600
z_as_relative = false
texture = ExtResource( 4 )
offset = Vector2( 7, -2 )
hframes = 4
frame = 3

[node name="BulletSpawn" type="Position2D" parent="."]
position = Vector2( 22, 0 )

[node name="PlayerDetector" type="RayCast2D" parent="."]
position = Vector2( 4, 0 )
enabled = true
cast_to = Vector2( 200, 0 )
collision_mask = 512
collide_with_areas = true

[node name="ExplodeSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
